--- a/Downloads/Bank Management System/package.json
+++ b/Downloads/Bank Management System/package.json
@@ -1,12 +1,6 @@
+
 {
-  "name": "bank-app-test",
-  "version": "1.0.0",
-  "description": "Headless tests for Bank Management System UI",
-  "main": "test-nav.js",
-  "scripts": {
-    "test-nav": "node test-nav.js"
-  },
-  "dependencies": {
-    "jsdom": "^22.1.0"
-  }
+	"name": "bank-management-system",
+	"version": "1.0.0",
+	"private": true
 }
